@@ -654,7 +654,7 @@ end
 
 setup \<open>
   map_theory_simpset (fn ctxt0 => ctxt0 |> Simplifier.add_unsafe_solver
-    (mk_solver "partial and linear orders" (fn ctxt => HOL_Order_Tac.tac (Simplifier.prems_of ctxt) ctxt)))
+    (Simplifier.mk_solver "partial and linear orders" (fn ctxt => HOL_Order_Tac.tac (Simplifier.prems_of ctxt) ctxt)))
 \<close>
 
 ML \<open>
