@@ -68,8 +68,8 @@ fun safe_solver ctxt =
 (*No simprules, but basic infrastructure for simplification*)
 val LK_basic_ss =
   empty_simpset \<^context>
-  |> Simplifier.set_safe_solver (mk_solver "safe" safe_solver)
-  |> Simplifier.set_unsafe_solver (mk_solver "unsafe" unsafe_solver)
+  |> Simplifier.set_safe_solver (Simplifier.mk_solver "safe" safe_solver)
+  |> Simplifier.set_unsafe_solver (Simplifier.mk_solver "unsafe" unsafe_solver)
   |> Simplifier.set_subgoaler asm_simp_tac
   |> Simplifier.set_mksimps (fn ctxt => map (mk_meta_eq ctxt) o atomize o Variable.gen_all ctxt)
   |> Simplifier.set_mkcong mk_meta_cong
