@@ -29,8 +29,13 @@ Minor INCOMPATIBILITY.
 * Config options simp_depth_limit, simp_trace_depth_limit, simp_debug,
 simp_trace now qualified in Isabelle/ML. Rare INCOMPATIBILITY.
 
-* Functions fold_rule, fold_goals_tac, norm_hhf, norm_hhf_protect from structure
-"Simplifier" are now qualified. Rare INCOMPATIBILITY.
+* Operations mk_rrules, eq_rrule, cert_simproc, transform_simproc,
+trim_context_simproc, mk_solver, empty_ss, merge_ss, fold_rule, fold_goals_tac,
+norm_hhf, norm_hhf_protect from structure "Simplifier" are now qualified.
+Minor INCOMPATIBILITY.
+
+* Datatype proc_kind from structure "Simplifier" is now qualified. Rare
+INCOMPATIBILITY.
 
 * Discontinued alias "Raw_Simplifier.rewrite"; use "Simplifier.rewrite_wrt"
 instead. Rare INCOMPATIBILITY.
